fix: auto scrollbar in modal window

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -1164,7 +1164,7 @@ footer {
 	bottom: 0;
 	background: rgba(0, 0, 0, 0.7);
 	z-index: 900;
-	overflow: scroll;
+	overflow: auto;
 	transition: opacity .125s ease-in;
 	opacity: 0;
 	visibility: hidden;
